--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>https://db80-173-183-245-235.ngrok-free.app</sonar.host.url>
+		<sonar.host.url>https://d2e8-173-183-245-235.ngrok-free.app</sonar.host.url>
 		<sonar.login>admin</sonar.login>
 		<sonar.password>sonar</sonar.password>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
