--- a/pom.xml
+++ b/pom.xml
@@ -95,12 +95,12 @@
 
     <distributionManagement>
         <repository>
-            <id>acada-release</id>
+            <id>central</id>
             <name>ACADA Learning release Nexus Repository</name>
             <url>http://172.28.111.99:8089/repository/acada-release/</url>
         </repository>
         <snapshotRepository>
-            <id>acada-snapshot</id>
+            <id>snapshots</id>
             <name>ACADA Learning snapshot Nexus Repository</name>
             <url>http://172.28.111.99:8089/repository/acada-snapshot/</url>
         </snapshotRepository>
