--- a/load_config/haproxy.cfg
+++ b/load_config/haproxy.cfg
@@ -1,7 +1,7 @@
 echo "Setting Up HA Proxy For APP Loadbalancing"
 
 
-        cat <<EOF > /opt/haproxy.cfg
+        cat <<EOF > /opt/docker_config_files/haproxy.cfg
         global
             log stdout format raw local0
 
