--- a/load_config/haproxy.cfg
+++ b/load_config/haproxy.cfg
@@ -10,10 +10,11 @@
             timeout server  50s
 
         frontend http_front
-            bind *:80
-            acl is_root_path path -i /
-            http-request set-path /web-app/ if is_root_path
-            default_backend http_back
+   bind *:80
+   acl is_root_path path -i /
+   http-request set-path /web_artifact/ if is_root_path
+   default_backend http_back
+
 
         backend http_back
             balance random
