--- a/pom.xml
+++ b/pom.xml
@@ -124,10 +124,10 @@
         <configuration>
             <type>runtime</type>
             <properties>
-                <cargo.hostname>192.168.1.71</cargo.hostname> <!-- or your Tomcat host IP -->
-                <cargo.servlet.port>8080</cargo.servlet.port>
-                <cargo.remote.username>admin</cargo.remote.username>
-                <cargo.remote.password>admin123</cargo.remote.password>
+               <cargo.remote.username>acada</cargo.remote.username>
+<cargo.remote.password>admin123</cargo.remote.password>
+<cargo.hostname>192.168.1.71</cargo.hostname> <!-- IP of the machine running Tomcat -->
+<cargo.servlet.port>8080</cargo.servlet.port>
             </properties>
         </configuration>
         <deployer>
